fix dropdown spacing

--- a/assets/custom.css
+++ b/assets/custom.css
@@ -114,7 +114,7 @@ header .headerWrapper p {
   .mobile-menu.show {
     transition: 0.5s all ease-in-out;
     max-height: 400px;
-    padding: 25px 20px;
+    padding: 16px 20px 25px;
   }
 
   .mobile-menu .btn {
